feat: use esm module

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "taskr-swc-alt",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "MIT",
   "keywords": [
     "taskr-swc",
     "swc task"
   ],
+  "type": "module",
   "scripts": {
     "prettier-fix": "prettier --write ."
   },
